# Epitech

./: README.md
Tek1/: README.md
Tek1/chocolatine/: Makefile
Tek1/countisland/: .gitignore
Tek1/cpoolday01/: push_that.sh
Tek1/cpoolday02/: how_many_are_we.sh  looneytised.sh  r_tacpy.sh
Tek1/cpoolday03/: my_print_alpha.c  my_print_comb.c  my_print_comb2.c  my_print_combn.c  my_print_digits.c  my_print_revalpha.c
Tek1/cpoolday04/: my_sort_int_array.c
Tek1/cpoolday05/: count_valid_queens_placements.c  my_compute_factorial_it.c  my_compute_factorial_rec.c
Tek1/cpoolday06/: .gitignore
Tek1/cpoolday09/: swap_endian_color.c
Tek1/cpoolday10/: .gitignore  my_sort_word_array.c
Tek1/cpoolday11/: my_apply_on_matching_nodes.c  my_params_to_list.c  my_rev_list.c
Tek1/cpoolday13/: Makefile  btree_apply_by_level.c  btree_apply_suffix.c  btree_search_item.c
Tek1/epytodo/: package-lock.json  package.json
Tek1/finalstumper/: detector.c  my_put_nbr.c  my_realloc.c
Tek1/miniprintf/: miniprintf.c  miniprintf.h  my_putchar.c  my_strlen.c  print_ap_percentage.c
Tek1/minishell2/: .gitignore  Makefile
Tek2/: README.md
Tek2/B-OOP-400/RayTracer/: .gitignore  CMakeLists.txt  Makefile  README.md
Tek2/B-OOP-400/RayTracer/configs/: example.cfg
Tek2/B-OOP-400/RayTracer/include/raytracer/core/: Camera.hpp  Configuration.hpp  Display.hpp  Hit.hpp  Ray.hpp
Tek2/B-OOP-400/RayTracer/include/raytracer/lights/: Ambient.hpp  Directional.hpp  ILight.hpp
Tek2/B-OOP-400/RayTracer/include/raytracer/materials/: Color.hpp  Dielectric.hpp  Flat.hpp  IMaterial.hpp  Lambertian.hpp  Metal.hpp
Tek2/B-OOP-400/RayTracer/include/raytracer/maths/: AABB.hpp  Interval.hpp  Utils.hpp  Vector3.hpp
Tek2/B-OOP-400/RayTracer/include/raytracer/objects/: BVH.hpp  Cone.hpp  Cylinder.hpp  Disc.hpp  IObject.hpp  Plane.hpp  RotateY.hpp  Scene.hpp  Sphere.hpp  Translate.hpp
Tek2/B-OOP-400/RayTracer/src/: Main.cpp
Tek2/B-OOP-400/RayTracer/src/raytracer/core/: Camera.cpp  Configuration.cpp  Display.cpp
Tek2/B-OOP-400/RayTracer/src/raytracer/lights/: Ambient.cpp  Directional.cpp
Tek2/B-OOP-400/RayTracer/src/raytracer/materials/: Color.cpp  Dielectric.cpp  Flat.cpp  Lambertian.cpp  Metal.cpp
Tek2/B-OOP-400/RayTracer/src/raytracer/maths/: AABB.cpp  Interval.cpp  Utils.cpp
Tek2/B-OOP-400/RayTracer/src/raytracer/objects/: BVH.cpp  Cone.cpp  Cylinder.cpp  Disc.cpp  Plane.cpp  RotateY.cpp  Scene.cpp  Sphere.cpp  Translate.cpp
Tek2/B-PDG-300/PDGRUSH3/: .gitignore  CMakeLists.txt  Makefile
Tek2/B-PDG-300/PDGRUSH3/.github/workflows/: build.yaml
Tek2/B-PDG-300/PDGRUSH3/include/krell/core/: Configuration.hpp  KernelParser.hpp  Monitor.hpp  Types.hpp
Tek2/B-PDG-300/PDGRUSH3/include/krell/displays/: IDisplay.hpp  NCursesDisplay.hpp  SFMLDisplay.hpp
Tek2/B-PDG-300/PDGRUSH3/include/krell/modules/: BatteryModule.hpp  CpuModule.hpp  IModule.hpp  ModuleFactory.hpp  RamModule.hpp  SystemInfoModule.hpp
Tek2/B-PDG-300/PDGRUSH3/src/: main.cpp
Tek2/B-PDG-300/PDGRUSH3/src/krell/core/: Configuration.cpp  DisplayMode.cpp  KernelParser.cpp  Monitor.cpp
Tek2/B-PDG-300/PDGRUSH3/src/krell/displays/: NCursesDisplay.cpp  SFMLDisplay.cpp
Tek2/B-PDG-300/PDGRUSH3/src/krell/modules/: BatteryModule.cpp  CpuModule.cpp  ModuleFactory.cpp  RamModule.cpp  SystemInfoModule.cpp
(+1936 files in other folders)
